--- a/web/css/MasterPage.css
+++ b/web/css/MasterPage.css
@@ -33,34 +33,55 @@ header {
     width:100%;
 }
 #corpo{
-    margin: 10px 100px 20px 100px;
+    margin: 10px 80px 20px 80px;
     padding: 40px 10px 40px 10px;
-    //    border: 1px solid blue;
 }
 .imgSetor{
     border-radius:0px 20px 0px 20px;
     width: 200px;
 }
-#tbUsers1 th, #tbRes th{
+#titAS{
     background-color: forestgreen;
     color: white;
     text-shadow: none;   
     border-radius: 6px 6px 6px 6px;
-     padding-left: 10px;
-    padding-right: 10px;
+   width: 500px;
 }
-#tbUsers2 th{
+.tbl th{
     background-color: forestgreen;
     color: white;
     text-shadow: none;   
-    width: 200px;
-    border-radius: 6px 6px 6px 6px; 
+    border-radius: 6px 6px 6px 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 150px;
 }
-#tbUsers1 td, #tbUsers2 td, #tbRes td{   
+.tbl td{   
     border: 1px solid forestgreen;
     border-radius: 6px 6px 6px 6px;   
     padding-left: 10px;
     padding-right: 10px;
+}
+.tbIni th{
+    background-color: forestgreen;
+    color: white;
+    text-shadow: none;   
+    border-radius: 6px 6px 6px 6px;    
+}
+.tbIni td{
+    padding: 0 15px 0 15px;
+}
+#divSol{
+    background-color: forestgreen;
+    color: white;
+    text-align: center;
+    font-size: 14pt;
+    text-shadow: none;   
+    border-radius: 10px 10px 10px 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 30px;
+    float: left;
 }
 #rodape{
     font: calibre;
